@@ -3,11 +3,8 @@
   <record id="1" aka="AAAAAAAAAAE=">
     <pickle>
       <tuple>
-        <tuple>
-          <string>Products.ERP5Form.Form</string>
-          <string>ERP5Form</string>
-        </tuple>
-        <none/>
+        <global name="ERP5Form" module="Products.ERP5Form.Form"/>
+        <tuple/>
       </tuple>
     </pickle>
     <pickle>
@@ -90,6 +87,8 @@
                     <value>
                       <list>
                         <string>my_title</string>
+                        <string>my_source_reference</string>
+                        <string>my_file</string>
                       </list>
                     </value>
                 </item>
@@ -97,7 +96,6 @@
                     <key> <string>right</string> </key>
                     <value>
                       <list>
-                        <string>my_file</string>
                         <string>image_view</string>
                       </list>
                     </value>
