@@ -1,3 +1,6 @@
+2007-10-10 Kazuhiko
+* add a read-only field of filename in File view and Image view.
+
 2007-09-25 yo
 * Set module group on portal types.
 
